styles: fix spacing between featured mentors and categories cards list

--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,11 @@ ul {
 .mb1 { margin-bottom: 0.5rem; }
 .ml1 { margin-left: 0.5rem; }
 
+.ma2 { margin: 1rem; }
+.mr2 { margin-right: 1rem; }
+.mb2 { margin-bottom: 1rem; }
+.ml2 { margin-left: 1rem; }
+
 /* INPUTS */
 label {
   display: block;
